Add get user by username
